full-stack_chatApp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chatapp-ingress
  namespace: chat-app
  labels: 
   name: chatapp-ingress
  annotations:

    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: yash-chatapp.com
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        
        backend:
          service:
            name: frontend
            port:
              number: 80  

      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend
            port:
              number: 5001
